--- a/django_blog/templates/home.html
+++ b/django_blog/templates/home.html
@@ -4,11 +4,26 @@
 {% block title %}Blover{% endblock title %}
 
 {% block head %}
+
 {% endblock head %}
 
 {% block content %}
 
 <div class="container">
+    <div class="row">
+        <div class="col-xs-8 col-md-0 featured-section">
+            <a class="featured" href="#"></a>
+        </div>
+        {% for category in categories %}
+        <div class="col-xs-4 col-md-2 py-3" style='text-align: center;'><a class='text-muted'
+                href="#">{{category.name}}</a>
+        </div>
+        {% endfor %}
+        <div class="col-xs-4 col-md-2 py-3" style='text-decoration: underline;'><a class='text-muted'
+                href="#">See all categories</a>
+        </div>
+    </div>
+    
     {% for post in post_list %}
     <div class="row p-3 border rounded mb-4">
         <div class="row px-4 py-3">
@@ -24,8 +39,16 @@
                 <p class='text-muted'>{{ post.last_updated|date:'F d, o' }}</p>
             </div>
         </div>
+        <div class="row px-4">
+            <a href="{% url 'blog:blog_detail' post.slug post.id %}" class="text-muted">
+                <h3 class="mb-0 fw-bold text-dark">{{ post.title }}</h3>
+                <p class="card-text mb-auto">{{post.body|linebreaks|truncatewords:100}}</p>
+                {% if post.body|wordcount > 100 %}
+                    <span class="text-primary">Continue reading</span>
+                {% endif %}
+            </a>
+        </div>
     </div>
 {% endfor %}
-</div>
 
 {% endblock content %}
