--- a/django_blog/users/templates/users/profile.html
+++ b/django_blog/users/templates/users/profile.html
@@ -57,7 +57,7 @@
                         {% if post %}
                         <div class="d-flex justify-content-between align-items-center mb-4">
                             <p class="lead fw-normal mb-0">Recent posts</p>
-                            <p class="mb-0"><a href="#" class="text-muted">Show all</a></p>{% endif %}
+                            <p class="mb-0"><a href="{% url 'blog:user_posts' profile.slug %}" class="text-muted">Show all</a></p>{% endif %}
                         </div>
                         {% for post in post %}
                         <div class="body-center">
