--- a/django_blog/users/templates/users/profile.html
+++ b/django_blog/users/templates/users/profile.html
@@ -28,7 +28,7 @@
                     <div class="p-4 text-black" style="background-color: #f8f9fa;">
                         {% if request.user.username == profile.user.username %}
                             <div style='float: left;'>
-                                <a href='#'><button class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                                <a href='{% url "users:settings" %}'><button class="btn btn-outline-dark" data-mdb-ripple-color="dark"
                                 style="z-index: 1;">Edit profile</button></a>
                             </div>
                             <div class="d-flex justify-content-end text-center py-1">
