--- a/django_blog/users/templates/users/profile.html
+++ b/django_blog/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
 {% block title %}{{request.user.username}}{% endblock title %}
 
 {% block content %}
@@ -35,12 +36,12 @@
                         {% else %}
                             <div class="d-flex text-center py-1">
                         {% endif %}
-                                <a href='#' class='text-reset'><div class="px-3">
-                                    <p class="mb-1 h5">0</p>
+                                <a href='{% url "users:followers_list" profile.slug %}' class='text-reset'><div class="px-3">
+                                    <p class="mb-1 h5">{{profile.followers_count}}</p>
                                     <p class="small text-muted mb-0">Followers</p>
                                 </div></a>
-                                <a href='#' class='text-reset'><div class="px-3">
-                                    <p class="mb-1 h5">0</p>
+                                <a href='{% url "users:following_list" profile.slug %}' class='text-reset'><div class="px-3">
+                                    <p class="mb-1 h5">{{profile.following_count}}</p>
                                     <p class="small text-muted mb-0">Following</p>
                                 </div></a>
                             </div>
@@ -66,7 +67,7 @@
                                     <a href="{% url 'users:profile' post.author.profile.slug %}" class='text-muted'>
                                         <div class='app_top'>
                                             <img src="{{ post.author.profile.image.url }}" alt="photo" width="50" height="50" style="float: left;">
-                                            <p><span style='font-weight: bold; padding: 5px 3% 5px;'>{{ post.author.username }}</span><br><span class='text-muted', style='padding: 5px 3% 5px;'>{{ post.date_create|date:'F d, o' }}</span></p></a>
+                                            <p><span style='font-weight: bold; padding: 5px 3% 5px;'>{{ post.author.first_name }}{% if post.author.last_name %}{{ post.author.last_name }}{% endif %}</span><br><span class='text-muted', style='padding: 5px 3% 5px;'>{{ post.date_create|date:'F d, o' }}</span></p></a>
                                         </div>
                                         <a href="{% url 'blog:blog_detail' post.slug post.id %}" class='text-muted'><h3 class='mb-0 fw-bold text-dark'>{{ post.title|truncatewords:50 }}</h3>
                                         <p class="card-text mb-auto">{{post.body|linebreaks|truncatewords:30}}</p>
