--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -77,9 +77,32 @@
                 <p style='margin-bottom: 0px'>{{ comment.author|capfirst }}</p></a>
             <p class="text-muted">{{ comment.date_create|date:"F d, Y" }}</p>
             <p class="comment-text">{{ comment.comment }}</p>
+            <div class="comment-actions">
+                {% if comment.author == request.user %}
+                    <form method="POST" action="{% url 'blog:delete_comment' post_detail.slug comment.id %}">{% csrf_token %}
+                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#CommentDelete-{{comment.id}}">Delete</button>
+                        <div class="modal fade" id="CommentDelete-{{comment.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure you want to delete this comment?</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    {{comment.comment}}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-danger btn">Delete</button>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                {% endif %}
         </div>
-        {% endfor %}
     </div>
+        {% endfor %}
 </section>
 
 {% endblock content %}
