--- a/django_blog/templates/home.html
+++ b/django_blog/templates/home.html
@@ -4,7 +4,7 @@
 {% block title %}Blover{% endblock title %}
 
 {% block head %}
-
+<link rel="stylesheet" href="{% static 'poststyles.css' %}">
 {% endblock head %}
 
 {% block content %}
@@ -16,25 +16,24 @@
         </div>
         {% for category in categories %}
         <div class="col-xs-4 col-md-2 py-3" style='text-align: center;'><a class='text-muted'
-                href="#">{{category.name}}</a>
+                href="{% url 'blog:category' category.slug %}">{{category.name}}</a>
         </div>
         {% endfor %}
         <div class="col-xs-4 col-md-2 py-3" style='text-decoration: underline;'><a class='text-muted'
                 href="{% url 'blog:categories' %}">See all categories</a>
         </div>
     </div>
-    
-    {% for post in post_list %}
+    {% for post in page_obj %}
     <div class="row p-3 border rounded mb-4">
         <div class="row px-4 py-3">
             <div class="col-1" style='padding-right:0px; width:70px'>
-                <a href="#">
+                <a href="{% url 'users:profile' post.author.profile.slug %}">
                     <img src="{{ post.author.profile.image.url }}" alt="photo" width="50" height="50" class="rounded-circle">
                 </a>
             </div>
             <div class="col-md-7 col-9">
-                <a href="#" class='text-muted'>
-                    <h5>{{ post.author.username }}</h5>
+                <a href="{% url 'users:profile' post.author.profile.slug %}" class='text-muted'>
+                    <h5>{{post.author.username}}</h5>
                 </a>
                 <p class='text-muted'>{{ post.last_updated|date:'F d, o' }}</p>
             </div>
@@ -44,11 +43,32 @@
                 <h3 class="mb-0 fw-bold text-dark">{{ post.title }}</h3>
                 <p class="card-text mb-auto">{{post.body|linebreaks|truncatewords:100}}</p>
                 {% if post.body|wordcount > 100 %}
-                    <span class="text-primary">Continue reading</span>
+                <span class="text-primary">Continue reading</span>
                 {% endif %}
             </a>
         </div>
     </div>
 {% endfor %}
+</div>
+
+
+<div class="col p-4 d-flex flex-column position-static">
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        {% for i in paginator.page_range %}
+        {% if page_obj.number == i %}
+        <span class="current-page">{{ i }}</span>
+        {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <a href="?page={{ i }}">{{ i }}</a>
+            {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            {% endif %}
+    </div>
+</div>
 
 {% endblock content %}
