--- a/django_blog/blog/templates/blog/category.html
+++ b/django_blog/blog/templates/blog/category.html
@@ -7,34 +7,38 @@
 
 {% block content %}
 
-{% for post in page_obj %}
-<div class="container py-2">
-    <div class="row p-3 border rounded mb-4">
-        <div class="row px-4 py-3">
-            <div class="col-1" style='padding-right:0px; width:70px'>
-                <a href="{% url 'users:profile' post.author.profile.slug %}">
-                    <img src="{{ post.author.profile.image.url }}" alt="photo" width="50" height="50" class="rounded-circle">
-                </a>
-            </div>
-            <div class="col-md-7 col-9">
-                <a href="{% url 'users:profile' post.author.profile.slug %}" class='text-muted'>
-                    <h5>{{ post.author.first_name }}{% if post.author.last_name %}{{ post.author.last_name }}{% endif %}</h5>
-                </a>
-                <p class='text-muted'>{{ post.last_updated|date:'F d, o' }}</p>
+{% if page_obj %}
+    {% for post in page_obj %}
+        <div class="container py-2">
+            <div class="row p-3 border rounded mb-4">
+                <div class="row px-4 py-3">
+                    <div class="col-1" style='padding-right:0px; width:70px'>
+                        <a href="{% url 'users:profile' post.author.profile.slug %}">
+                            <img src="{{ post.author.profile.image.url }}" alt="photo" width="50" height="50" class="rounded-circle">
+                        </a>
+                    </div>
+                    <div class="col-md-7 col-9">
+                        <a href="{% url 'users:profile' post.author.profile.slug %}" class='text-muted'>
+                            <h5>{{post.author.username}}</h5>
+                        </a>
+                        <p class='text-muted'>{{ post.last_updated|date:'F d, o' }}</p>
+                    </div>
+                </div>
+                <div class="row px-4">
+                    <a href="{% url 'blog:blog_detail' post.slug post.id %}" class="text-muted">
+                        <h3 class="mb-0 fw-bold text-dark">{{ post.title }}</h3>
+                        <p class="card-text mb-auto">{{post.body|linebreaks|truncatewords:100}}</p>
+                        {% if post.body|wordcount > 100 %}
+                        <span class="text-primary">Continue reading</span>
+                        {% endif %}
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="row px-4">
-            <a href="{% url 'blog:blog_detail' post.slug post.id %}" class="text-muted">
-                <h3 class="mb-0 fw-bold text-dark">{{ post.title }}</h3>
-                <p class="card-text mb-auto">{{post.body|linebreaks|truncatewords:100}}</p>
-                {% if post.body|wordcount > 100 %}
-                <span class="text-primary">Continue reading</span>
-                {% endif %}
-            </a>
-        </div>
-    </div>
-</div>
-{% endfor %}
+    {% endfor %}
+{% else %}
+    <h3 class='text-center'>No Post Found</h3>
+{% endif %}
 
 <div class="col p-4 d-flex flex-column position-static">
     <div class="pagination">
